--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
-          user: nx-
+          user: NX-Official
           template: classic
           base: header, activity, community, repositories, metadata
           config_display: large
