--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,26 +25,19 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
-          user: NX-Official
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: activity, community, repositories, metadata
           config_timezone: Asia/Shanghai
-          plugin_followup: yes
-          plugin_followup_archived: yes
-          plugin_followup_sections: repositories
+          plugin_habits: yes
+          plugin_habits_charts: yes
+          plugin_habits_charts_type: classic
+          plugin_habits_days: 14
+          plugin_habits_facts: yes
+          plugin_habits_from: 200
+          plugin_habits_languages_limit: 8
+          plugin_habits_languages_threshold: 0%
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_skipped: NX-Official/NX-Official.github.io
-          plugin_languages_threshold: 0%
-          plugin_stars: yes
-          plugin_stars_limit: 4
+          plugin_isocalendar_duration: full-year
+          plugin_rss: yes
+          plugin_rss_limit: 4
+          plugin_rss_source: https://nickxu.me/rss2.xml
